﻿+++++++++++
Python News
+++++++++++

What's New in Python 2.7.11?
============================

*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

Library
-------

- Issue #20014: array.array() now accepts unicode typecodes.  Based on patch by
  Vajrasky Kok.

- Issue #23637: Showing a warning no longer fails with UnicodeErrror.
  Formatting unicode warning in the file with the path containing non-ascii
  characters no longer fails with UnicodeErrror.

- Issue #24134: Reverted issue #24134 changes.


What's New in Python 2.7.10 release candidate 1?
================================================

*Release date: 2015-05-10*

Core and Builtins
-----------------

- Issue #20274: When calling a _sqlite.Connection, it now complains if passed
  any keyword arguments.  Previously it silently ignored them.

- Issue #23971:  Fix underestimated presizing in dict.fromkeys().

- Issue #20274: Remove ignored and erroneous "kwargs" parameters from three
  METH_VARARGS methods on _sqlite.Connection.

- Issue #23629: Fix the default __sizeof__ implementation for variable-sized
  objects.

- Issue #23055: Fixed a buffer overflow in PyUnicode_FromFormatV.  Analysis
  and fix by Guido Vranken.

- Issue #23048: Fix jumping out of an infinite while loop in the pdb.

Library
-------

- The keywords attribute of functools.partial is now always a dictionary.

- Issue #24134: assertRaises() and assertRaisesRegexp() checks are not longer
  successful if the callable is None.

- Issue #23008: Fixed resolving attributes with boolean value is False in pydoc.

- Issues #24099, #24100, and #24101: Fix free-after-use bug in heapq's siftup
  and siftdown functions.

- Backport collections.deque fixes from Python 3.5.  Prevents reentrant badness
  during deletion by deferring the decref until the container has been restored
  to a consistent state.

- Issue #23842: os.major(), os.minor() and os.makedev() now support ints again.
